--- a/slides/notebooks/dtc-exercises.ipynb
+++ b/slides/notebooks/dtc-exercises.ipynb
@@ -24,22 +24,17 @@
     "#### Using the ARC cluster \"arcus-b\"\n",
     "\n",
     "Use the teaching account credentials you have been given to log in.\n",
-    "For example,\n",
+    "For example, if you have been given account details for account ```teaching01```\n",
     "\n",
     "```\n",
     "ssh -XC teaching01@arcus-b.arc.ox.ac.uk\n",
     "```\n",
     "\n",
-    "To use the Anaconda distribution of Python, load\n",
-    "\n",
+    "We have automatically set up your working environment to use the following system environment modules:\n",
     "```\n",
-    "module load python/anaconda2\n",
-    "```\n",
-    "\n",
-    "Also, you need to use the compilers, therefore load\n",
-    "\n",
-    "```\n",
+    "module load python/anaconda2/2019.03\n",
     "module load gcc/5.3.0\n",
+    "module load git\n",
     "```\n",
     "\n",
     "For the last exercise you may wish to submit and test MPI jobs\n",
@@ -53,16 +48,30 @@
     "sbatch arcus-slurm-submit.sh\n",
     "```\n",
     "\n",
-    "#### Working in your local environment\n",
+    "#### Working in your local Linux environment\n",
     "\n",
     "Alternatively if you have an Anaconda environment set up on your local machine you may download the material from GitHub:\n",
     "\n",
     "```\n",
     "git clone https://github.com/andygittings/python-dec-2019\n",
     "```\n",
-    "##   \n",
-    "##   \n",
-    "####    \n",
+    "\n",
+    "#### Connecting to ARCUS-B  from Windows\n",
+    "\n",
+    "If you have problems with connecting via SSH (including X display issues) Try connecting via Windows using the MobaXTerm application. This may be downloaded from:\n",
+    "```\n",
+    "https://mobaxterm.mobatek.net/download-home-edition.html\n",
+    "```\n",
+    "Find the downloaded file named \"MobaXterm_Portable_v12.4.zip\" and extract this and run\n",
+    "MobaXterm_Personal_12.4.exe\n",
+    "\n",
+    "Once MobaXterm is open click \"Session\" then select the \"SSH\" tab and enter :\n",
+    "arcus-b.arc.ox.ac.uk in the \"Remote Host\" field - then click OK.\n",
+    "\n",
+    "When prompted to \"login as:\" type the username on the training account sheet you have been given, and when prompted for \"teachingNN password:\" enter the password from the sheet.\n",
+    "\n",
+    "You should now be connected to the ARCUS-B system.\n",
+    "\n",
     "\n",
     "### Material\n",
     "\n",
@@ -78,18 +87,14 @@
     "cd python-dec-2019\n",
     "```\n",
     "\n",
-    "as well as this PDF file, you will find the directories:\n",
-    "```\n",
-    "darts/\n",
-    "integral/\n",
-    "```\n",
-    "which respectively correspond to material for the last two exercises.\n",
+    "as well as this PDF file, you will find the following directories:\n",
     "\n",
-    "Also the directory:\n",
     "```\n",
-    "worked/\n",
+    "darts\\       Question 3. \n",
+    "integral\\    Question 4.\n",
+    "examples\\    Some useful demonstration scripts\n",
+    "slides\\      Course slides in PDF format\n",
     "```\n",
-    "Which contains the solutions to all exercises.\n",
     "\n",
     "### Editing files\n",
     "\n",
@@ -107,7 +112,15 @@
     "python mypython.py\n",
     "```\n",
     "\n",
+    "### Solutions\n",
     "\n",
+    "At some point during the practical we will make solutions to the exercises available for download. These will be available from the following Git repository: ```https://github.com/andygittings/python-worked-dec-2019```\n",
+    "\n",
+    "To download, use the following command:\n",
+    "\n",
+    "```\n",
+    "git clone https://github.com/andygittings/python-worked-dec-2019\n",
+    "```\n",
     "\n"
    ]
   },
@@ -115,14 +128,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##      \n",
-    "##    \n",
-    "##    \n",
+    "\n",
     "##     \n",
-    "##    \n",
-    "##   \n",
-    "##     \n",
-    "```    ```"
+    "##  "
    ]
   },
   {
